--- a/templates/index.html
+++ b/templates/index.html
@@ -2,39 +2,127 @@
 <html>
 <head>
 	<style type="text/css">
-		
+		.button {
+        border: 1px solid black;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 8px;
+        font-family: cursive;
+        background-color: #9ee9f4;
+        width: 300px;
+      }
+
+      .cursive {
+        font-family: cursive;
+        font-size: 15px;
+        padding: 5px;
+      }
+
+      .title {
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        text-align: center;
+        font-size: 25px;
+        padding-left: 15px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+      }
+
     </style>
 	<title>Employee Management System -- Home Page</title>
 </head>
 
 <div id="header">
-	<table style="width:100%; height: 60pt;">
+	<table style="width:100%; height: 300pt;">
         <tr>
           <th id="homeButton" style="width:10%">
             <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
           </th>
           <th style="width:20%;"></th>
-          <th>
+          <th class="cursive">
             <a href="/addemp/">Add Employee</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/getemp/">Get Employee</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/attendance/">Attendance</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/leave/">Apply Leave</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/portfolio/">Portfolio</a>
           </th>
           <th style="width:30%;"></th>
         </tr>
+
+        <!------------------------ blank row ------------------------->
+        <tr style="height:50px;">
+          <th></th>
+          <th style="width:20%;"></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th style="width:30%;"></th>
+        </tr>
+        <!------------------------ blank row ------------------------->
+
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#b4e7ef" class="title">Welcome to OK Employee Management System </th>
+          <th style="width:30%;"></th>
+        </tr>
+        
+        <!------------------------------- Add Emp Button -------------------------------->
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#dfe6ea">
+            <button class="button" type="submit">Add Employee</button>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <!------------------------------- Get Emp Button -------------------------------->
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#dfe6ea">
+            <button class="button" type="submit">Get Employee Info</button>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <!------------------------------- Attendance Button -------------------------------->
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#dfe6ea">
+            <button class="button" type="submit">Attendance</button>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <!------------------------------- Apply Leave Button -------------------------------->
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#dfe6ea">
+            <button class="button" type="submit">Apply Leave</button>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
       </table>
-</div>
-<div id="homeContent">
-	test
 </div>
 
 </html>
