--- a/templates/Portfolio.html
+++ b/templates/Portfolio.html
@@ -45,7 +45,7 @@
 
 	<title>Employee Management System -- Attendance</title>
 </head>
-<body background="{{ url_for('static', filename='img/background.jpg')}}">
+<body background="{{ url_for('static', filename='img/background.jpeg')}}">
   <div id="header">
     <table style="width:100%; height: 60pt;">
           <tr>
