--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,9 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button" type="submit">Add Employee</button>
+            <a href="/addemp/">
+              <button class="button" type="submit">Add Employee</button>
+            </a>
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -97,7 +99,9 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button" type="submit">Get Employee Info</button>
+            <a href="/getemp/">
+              <button class="button" type="submit">Get Employee Info</button>
+            </a>
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -107,7 +111,9 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button" type="submit">Attendance</button>
+            <a href="/attendance/">
+              <button class="button" type="submit">Attendance</button>
+            </a>
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -117,7 +123,21 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button" type="submit">Apply Leave</button>
+            <a href="/leave/">
+              <button class="button" type="submit">Apply Leave</button>
+            </a>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <!------------------------------- Portfolio Button -------------------------------->
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#dfe6ea">
+            <a href="/portfolio/">
+              <button class="button" type="submit">Portfolio</button>
+            </a>
           </th>
           <th style="width:30%;"></th>
         </tr>
