--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -31,126 +31,133 @@
         padding-top: 10px;
         padding-bottom: 10px;
       }
+
+      .background{
+        background-repeat: no-repeat;
+      }
+
     </style>
 	<title>Employee Information</title>
 </head>
 
-<div id="header">
-	<table style="width:100%; height: 400pt;">
-        <tr>
-          <th id="homeButton" style="width:10%">
-            <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
-          </th>
-          <th style="width:20%;"></th>
-          <th class="cursive">
-            <a href="/addemp/">Add Employee</a>
-          </th>
-          <th class="cursive">
-            <a href="/getemp/">Get Employee</a>
-          </th>
-          <th class="cursive">
-            <a href="/attendance/">Attendance</a>
-          </th>
-          <th class="cursive">
-            <a href="/leave/">Apply Leave</a>
-          </th>
-          <th class="cursive"> 
-            <a href="/portfolio/">Portfolio</a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!------------------------ blank row ------------------------->
-        <tr style="height:50px;">
-          <th></th>
-          <th style="width:20%;"></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th style="width:30%;"></th>
-        </tr>
-        <!------------------------ blank row ------------------------->
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#b4e7ef" class="title">Employee Information </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
-          <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{result[0]}}</p> <!-- employee id -->
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th style="background-color:#dfe6ea" class="cursive">First Name : </th>
-          <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{result[1]}}</p> <!--firstname-->
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th style="background-color:#dfe6ea" class="cursive">Last Name : </th>
-          <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{result[2]}}</p> <!--lastname-->
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th style="background-color:#dfe6ea" class="cursive">Primary Skills : </th>
-          <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{result[3]}}</p> <!--primary skills-->
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th style="background-color:#dfe6ea" class="cursive">Location : </th>
-          <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{result[4]}}</p> <!--location-->
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!-- <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th style="background-color:#dfe6ea" class="cursive">Image File : </th>
-          <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{imageUrl}}</p>
-          </th>
-          <th style="width:30%;"></th>
-        </tr> -->
-
-        <!------------------------------- Button -------------------------------->
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#dfe6ea">
-            <a href="/getemp/">
-              <button class="button" formaction="/getemp/">Close</button>
-            </a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-      </table>
-</div>
+<body background="{{ url_for('static', filename='img/background.jpg')}}" class="background">
+  <div id="header">
+    <table style="width:100%; height: 400pt;">
+          <tr>
+            <th id="homeButton" style="width:10%">
+              <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
+            </th>
+            <th style="width:20%;"></th>
+            <th class="cursive">
+              <a href="/addemp/">Add Employee</a>
+            </th>
+            <th class="cursive">
+              <a href="/getemp/">Get Employee</a>
+            </th>
+            <th class="cursive">
+              <a href="/attendance/">Attendance</a>
+            </th>
+            <th class="cursive">
+              <a href="/leave/">Apply Leave</a>
+            </th>
+            <th class="cursive"> 
+              <a href="/portfolio/">Portfolio</a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!------------------------ blank row ------------------------->
+          <tr style="height:50px;">
+            <th></th>
+            <th style="width:20%;"></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th style="width:30%;"></th>
+          </tr>
+          <!------------------------ blank row ------------------------->
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#b4e7ef" class="title">Employee Information </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
+            <th colspan="4" style="background-color:#dfe6ea">
+              <p class="cursive">{{result[0]}}</p> <!-- employee id -->
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th style="background-color:#dfe6ea" class="cursive">First Name : </th>
+            <th colspan="4" style="background-color:#dfe6ea">
+              <p class="cursive">{{result[1]}}</p> <!--firstname-->
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th style="background-color:#dfe6ea" class="cursive">Last Name : </th>
+            <th colspan="4" style="background-color:#dfe6ea">
+              <p class="cursive">{{result[2]}}</p> <!--lastname-->
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th style="background-color:#dfe6ea" class="cursive">Primary Skills : </th>
+            <th colspan="4" style="background-color:#dfe6ea">
+              <p class="cursive">{{result[3]}}</p> <!--primary skills-->
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th style="background-color:#dfe6ea" class="cursive">Location : </th>
+            <th colspan="4" style="background-color:#dfe6ea">
+              <p class="cursive">{{result[4]}}</p> <!--location-->
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!-- <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th style="background-color:#dfe6ea" class="cursive">Image File : </th>
+            <th colspan="4" style="background-color:#dfe6ea">
+              <p class="cursive">{{imageUrl}}</p>
+            </th>
+            <th style="width:30%;"></th>
+          </tr> -->
+  
+          <!------------------------------- Button -------------------------------->
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#dfe6ea">
+              <a href="/getemp/">
+                <button class="button" formaction="/getemp/">Close</button>
+              </a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+        </table>
+  </div>
+</body>
 
 </html>
