--- a/templates/AttendanceOutput.html
+++ b/templates/AttendanceOutput.html
@@ -26,90 +26,96 @@
         font-size: 15px;
         padding: 5px;
       }
+
+      .background{
+        background-repeat: no-repeat;
+      }
     </style>
 	<title>Employee Management System -- Attendance</title>
 </head>
 
-<div id="header">
-	<table style="width:100%; height: 300pt;">
-        <tr>
-          <th id="homeButton" style="width:10%">
-            <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
-          </th>
-          <th style="width:20%;"></th>
-          <th class="cursive">
-            <a href="/addemp/">Add Employee</a>
-          </th>
-          <th class="cursive">
-            <a href="/getemp/">Get Employee</a>
-          </th>
-          <th class="cursive"> 
-            <a href="/attendance/">Attendance</a>
-          </th>
-          <th class="cursive">
-            <a href="/leave/">Apply Leave</a>
-          </th>
-          <th class="cursive">
-            <a href="/portfolio/">Portfolio</a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-        
-        <!------------------------ blank row ------------------------->
-        <tr style="height:50px;">
-          <th></th>
-          <th style="width:20%;"></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th style="width:30%;"></th>
-        </tr>
-        <!------------------------ blank row ------------------------->
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="2" style="background-color:#dfe6ea" class="cursive">Login Time : </th>
-          <th colspan="3" style="background-color:#dfe6ea">
-              <p class="cursive">{{CheckinTime}}</p>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="2" style="background-color:#dfe6ea" class="cursive">Checkout Time : </th>
-          <th colspan="3" style="background-color:#dfe6ea">
-                  <p class="cursive">{{CheckoutTime}}</p>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="2" style="background-color:#dfe6ea" class="cursive">Total Working Hours : </th>
-          <th colspan="3" style="background-color:#dfe6ea">
-              <p class="cursive">{{TotalWorkingHours}}</p>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!------------------------------- Button -------------------------------->
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#dfe6ea">
-            <a href="/attendance/">
-              <button class="button" formaction="/attendance/">Back</button>
-            </a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-      </table>
-</div>
+<body background="{{ url_for('static', filename='img/background.jpg')}}" class="background">
+  <div id="header">
+    <table style="width:100%; height: 300pt;">
+          <tr>
+            <th id="homeButton" style="width:10%">
+              <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
+            </th>
+            <th style="width:20%;"></th>
+            <th class="cursive">
+              <a href="/addemp/">Add Employee</a>
+            </th>
+            <th class="cursive">
+              <a href="/getemp/">Get Employee</a>
+            </th>
+            <th class="cursive"> 
+              <a href="/attendance/">Attendance</a>
+            </th>
+            <th class="cursive">
+              <a href="/leave/">Apply Leave</a>
+            </th>
+            <th class="cursive">
+              <a href="/portfolio/">Portfolio</a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+          
+          <!------------------------ blank row ------------------------->
+          <tr style="height:50px;">
+            <th></th>
+            <th style="width:20%;"></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th style="width:30%;"></th>
+          </tr>
+          <!------------------------ blank row ------------------------->
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="2" style="background-color:#dfe6ea" class="cursive">Login Time : </th>
+            <th colspan="3" style="background-color:#dfe6ea">
+                <p class="cursive">{{CheckinTime}}</p>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="2" style="background-color:#dfe6ea" class="cursive">Checkout Time : </th>
+            <th colspan="3" style="background-color:#dfe6ea">
+                    <p class="cursive">{{CheckoutTime}}</p>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="2" style="background-color:#dfe6ea" class="cursive">Total Working Hours : </th>
+            <th colspan="3" style="background-color:#dfe6ea">
+                <p class="cursive">{{TotalWorkingHours}}</p>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!------------------------------- Button -------------------------------->
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#dfe6ea">
+              <a href="/attendance/">
+                <button class="button" formaction="/attendance/">Back</button>
+              </a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+        </table>
+  </div>
+</body>
 
 </html>
