--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -31,80 +31,87 @@
         padding-top: 10px;
         padding-bottom: 10px;
       }
+
+	  .background{
+        background-repeat: no-repeat;
+      }
+
     </style>
 	<title>Get Employee Information</title>
 </head>
 
-<div id="header">
-	<form action="/getemp/results" method="POST">
-		<table style="width:100%; height: 220pt;">
-			<tr>
-			  <th id="homeButton" style="width:10%">
-				<a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
-			  </th>
-			  <th style="width:20%;"></th>
-			  <th class="cursive">
-				<a href="/addemp/">Add Employee</a>
-			  </th>
-			  <th class="cursive">
-				<a href="/getemp/">Get Employee</a>
-			  </th>
-			  <th class="cursive">
-				<a href="/attendance/">Attendance</a>
-			  </th>
-			  <th class="cursive">
-				<a href="/leave/">Apply Leave</a>
-			  </th>
-			  <th class="cursive">
-				<a href="/portfolio/">Portfolio</a>
-			  </th>
-			  <th style="width:30%;"></th>
-			</tr>
-	
-			<!------------------------ blank row ------------------------->
-			<tr style="height:50px;">
-			  <th></th>
-			  <th style="width:20%;"></th>
-			  <th ></th>
-			  <th ></th>
-			  <th ></th>
-			  <th ></th>
-			  <th ></th>
-			  <th style="width:30%;"></th>
-			</tr>
-			<!------------------------ blank row ------------------------->
-	
-			<tr>
-			  <th></th>
-			  <th style="width:20%;"></th>
-			  <th colspan="5" style="background-color:#b4e7ef" class="title">Get Employee Details </th>
-			  <th style="width:30%;"></th>
-			</tr>
-	
-			<tr>
-			  <th></th>
-			  <th style="width:20%;"></th>
-			  <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
-			  <th colspan="4" style="background-color:#dfe6ea">
-				<!-- <form method="post" action=""> -->
-					  <input type="text" name="emp_id" size="40" class="cursive">
-			  <!-- </form> -->
-			  </th>
-			  <th style="width:30%;"></th>
-			</tr>
-	
-			<!------------------------------- Button -------------------------------->
-			<tr>
-			  <th></th>
-			  <th style="width:20%;"></th>
-			  <th colspan="5" style="background-color:#dfe6ea">
-				<button class="button" type="submit">Fetch Info</button>
-			  </th>
-			  <th style="width:30%;"></th>
-			</tr>
-		  </table>
-	</form>
-</div>
+<body background="{{ url_for('static', filename='img/background.jpg')}}" class="background">
+	<div id="header">
+		<form action="/getemp/results" method="POST">
+			<table style="width:100%; height: 220pt;">
+				<tr>
+				  <th id="homeButton" style="width:10%">
+					<a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
+				  </th>
+				  <th style="width:20%;"></th>
+				  <th class="cursive">
+					<a href="/addemp/">Add Employee</a>
+				  </th>
+				  <th class="cursive">
+					<a href="/getemp/">Get Employee</a>
+				  </th>
+				  <th class="cursive">
+					<a href="/attendance/">Attendance</a>
+				  </th>
+				  <th class="cursive">
+					<a href="/leave/">Apply Leave</a>
+				  </th>
+				  <th class="cursive">
+					<a href="/portfolio/">Portfolio</a>
+				  </th>
+				  <th style="width:30%;"></th>
+				</tr>
+		
+				<!------------------------ blank row ------------------------->
+				<tr style="height:50px;">
+				  <th></th>
+				  <th style="width:20%;"></th>
+				  <th ></th>
+				  <th ></th>
+				  <th ></th>
+				  <th ></th>
+				  <th ></th>
+				  <th style="width:30%;"></th>
+				</tr>
+				<!------------------------ blank row ------------------------->
+		
+				<tr>
+				  <th></th>
+				  <th style="width:20%;"></th>
+				  <th colspan="5" style="background-color:#b4e7ef" class="title">Get Employee Details </th>
+				  <th style="width:30%;"></th>
+				</tr>
+		
+				<tr>
+				  <th></th>
+				  <th style="width:20%;"></th>
+				  <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
+				  <th colspan="4" style="background-color:#dfe6ea">
+					<!-- <form method="post" action=""> -->
+						  <input type="text" name="emp_id" size="40" class="cursive">
+				  <!-- </form> -->
+				  </th>
+				  <th style="width:30%;"></th>
+				</tr>
+		
+				<!------------------------------- Button -------------------------------->
+				<tr>
+				  <th></th>
+				  <th style="width:20%;"></th>
+				  <th colspan="5" style="background-color:#dfe6ea">
+					<button class="button" type="submit">Fetch Info</button>
+				  </th>
+				  <th style="width:30%;"></th>
+				</tr>
+			  </table>
+		</form>
+	</div>
+</body>
 </html>
 
 <!------------------------------- testing -------------------------------->
