--- a/templates/index.html
+++ b/templates/index.html
@@ -33,116 +33,122 @@
         padding-bottom: 30px;
       }
 
+      .background{
+        background-repeat: no-repeat;
+      }
+
     </style>
 	<title>Employee Management System -- Home Page</title>
 </head>
 
-<div id="header">
-	<table style="width:100%; height: 300pt;">
-        <tr>
-          <th id="homeButton" style="width:10%">
-            <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
-          </th>
-          <th style="width:20%;"></th>
-          <th class="cursive">
-            <a href="/addemp/">Add Employee</a>
-          </th>
-          <th class="cursive">
-            <a href="/getemp/">Get Employee</a>
-          </th>
-          <th class="cursive">
-            <a href="/attendance/">Attendance</a>
-          </th>
-          <th class="cursive">
-            <a href="/leave/">Apply Leave</a>
-          </th>
-          <th class="cursive">
-            <a href="/portfolio/">Portfolio</a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!------------------------ blank row ------------------------->
-        <tr style="height:50px;">
-          <th></th>
-          <th style="width:20%;"></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th ></th>
-          <th style="width:30%;"></th>
-        </tr>
-        <!------------------------ blank row ------------------------->
-
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#b4e7ef" class="title">Welcome to OK Employee Management System </th>
-          <th style="width:30%;"></th>
-        </tr>
-        
-        <!------------------------------- Add Emp Button -------------------------------->
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#dfe6ea">
-            <a href="/addemp/">
-              <button class="button" type="submit">Add Employee</button>
-            </a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!------------------------------- Get Emp Button -------------------------------->
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#dfe6ea">
-            <a href="/getemp/">
-              <button class="button" type="submit">Get Employee Info</button>
-            </a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!------------------------------- Attendance Button -------------------------------->
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#dfe6ea">
-            <a href="/attendance/">
-              <button class="button" type="submit">Attendance</button>
-            </a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!------------------------------- Apply Leave Button -------------------------------->
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#dfe6ea">
-            <a href="/leave/">
-              <button class="button" type="submit">Apply Leave</button>
-            </a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-        <!------------------------------- Portfolio Button -------------------------------->
-        <tr>
-          <th></th>
-          <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#dfe6ea">
-            <a href="/portfolio/">
-              <button class="button" type="submit">Portfolio</button>
-            </a>
-          </th>
-          <th style="width:30%;"></th>
-        </tr>
-
-      </table>
-</div>
+<body background="{{ url_for('static', filename='img/background.jpg')}}" class="background">
+  <div id="header">
+    <table style="width:100%; height: 300pt;">
+          <tr>
+            <th id="homeButton" style="width:10%">
+              <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
+            </th>
+            <th style="width:20%;"></th>
+            <th class="cursive">
+              <a href="/addemp/">Add Employee</a>
+            </th>
+            <th class="cursive">
+              <a href="/getemp/">Get Employee</a>
+            </th>
+            <th class="cursive">
+              <a href="/attendance/">Attendance</a>
+            </th>
+            <th class="cursive">
+              <a href="/leave/">Apply Leave</a>
+            </th>
+            <th class="cursive">
+              <a href="/portfolio/">Portfolio</a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!------------------------ blank row ------------------------->
+          <tr style="height:50px;">
+            <th></th>
+            <th style="width:20%;"></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th ></th>
+            <th style="width:30%;"></th>
+          </tr>
+          <!------------------------ blank row ------------------------->
+  
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#b4e7ef" class="title">Welcome to OK Employee Management System </th>
+            <th style="width:30%;"></th>
+          </tr>
+          
+          <!------------------------------- Add Emp Button -------------------------------->
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#dfe6ea">
+              <a href="/addemp/">
+                <button class="button" type="submit">Add Employee</button>
+              </a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!------------------------------- Get Emp Button -------------------------------->
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#dfe6ea">
+              <a href="/getemp/">
+                <button class="button" type="submit">Get Employee Info</button>
+              </a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!------------------------------- Attendance Button -------------------------------->
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#dfe6ea">
+              <a href="/attendance/">
+                <button class="button" type="submit">Attendance</button>
+              </a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!------------------------------- Apply Leave Button -------------------------------->
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#dfe6ea">
+              <a href="/leave/">
+                <button class="button" type="submit">Apply Leave</button>
+              </a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+          <!------------------------------- Portfolio Button -------------------------------->
+          <tr>
+            <th></th>
+            <th style="width:20%;"></th>
+            <th colspan="5" style="background-color:#dfe6ea">
+              <a href="/portfolio/">
+                <button class="button" type="submit">Portfolio</button>
+              </a>
+            </th>
+            <th style="width:30%;"></th>
+          </tr>
+  
+        </table>
+  </div>
+</body>
 
 </html>
