--- a/templates/AttendanceOutput.html
+++ b/templates/AttendanceOutput.html
@@ -29,6 +29,7 @@
 
       .background{
         background-repeat: no-repeat;
+        background-size: cover;
       }
     </style>
 	<title>Employee Management System -- Attendance</title>
