--- a/templates/Portfolio.html
+++ b/templates/Portfolio.html
@@ -12,6 +12,7 @@
         font-size: 50pt;
         text-align: right;
         padding-right: 300px;
+        color: white;
       }
 
       .content{
@@ -20,6 +21,7 @@
         text-align: center;
         padding-left: 50%;
         padding-right: 10%;
+        color: white;
       }
 
       .content1{
@@ -28,6 +30,7 @@
         text-align: right;
         padding-top: 3%;
         padding-right: 23%;
+        color: white;
       }
       .content2{
         font-family: Bradley Hand ITC;
@@ -35,6 +38,7 @@
         font-size: 20pt;
         text-align: right;
         padding-right: 15%;
+        color: white;
       }
       .cursive {
         font-family: cursive;
@@ -43,6 +47,7 @@
       }
       .background{
         background-repeat: no-repeat;
+        background-size: cover;
       }
     </style>
 
