--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -31,6 +31,7 @@
       }
       .background{
         background-repeat: no-repeat;
+        background-size: cover;
       }
     </style>
 </head>
