--- a/templates/ApplyLeaveOutput.html
+++ b/templates/ApplyLeaveOutput.html
@@ -34,9 +34,10 @@
         padding-top: 10px;
         padding-bottom: 10px;
       }
-      
+
       .background{
         background-repeat: no-repeat;
+        background-size: cover;
       }
     </style> 
 
