--- a/templates/Portfolio.html
+++ b/templates/Portfolio.html
@@ -10,6 +10,7 @@
       .aboutUs{
         font-family:'Courier New', Courier, monospace;
         font-size: 50pt;
+        font-weight: bold;
         text-align: right;
         padding-right: 300px;
         color: white;
@@ -27,18 +28,20 @@
       .content1{
         font-family:'Courier New', Courier, monospace;
         font-size: 30pt;
+        font-weight: bold;
         text-align: right;
-        padding-top: 3%;
         padding-right: 23%;
         color: white;
       }
       .content2{
         font-family: Bradley Hand ITC;
         font-weight: bolder;
-        font-size: 20pt;
-        text-align: right;
-        padding-right: 15%;
+        font-size: 17pt;
+        text-align: center;
+        padding-left: 50%;
+        padding-right: 10%;
         color: white;
+
       }
       .cursive {
         font-family: cursive;
@@ -97,7 +100,7 @@
   </div>
   <div id="content2">
     <p class="content2">
-      Lim Yen Qi&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYap Shin Han
+      We're Lim Yen Qi and Yap Shin Han, both from Tunku Abdul Rahman University College (TARUC). Currently, we're studying in Bachelor of Computer Science (Honours) in Software Engineering.
     </p>
   </div>
   </div>
