--- a/templates/Portfolio.html
+++ b/templates/Portfolio.html
@@ -100,7 +100,7 @@
   </div>
   <div id="content2">
     <p class="content2">
-      We're Lim Yen Qi and Yap Shin Han, both from Tunku Abdul Rahman University College (TARUC). Currently, we're studying in Bachelor of Computer Science (Honours) in Software Engineering.
+      We're Lim Yen Qi and Yap Shin Han, both from Tunku Abdul Rahman University College (TARUC) KL Main Campus. Currently, we're studying in Bachelor of Computer Science (Honours) in Software Engineering.
     </p>
   </div>
   </div>
