--- a/templates/Portfolio.html
+++ b/templates/Portfolio.html
@@ -56,7 +56,8 @@
 
 	<title>Employee Management System -- Attendance</title>
 </head>
-<body background="{{ url_for('static', filename='img/emp_background.jpeg')}}" class="background">
+<!-- <body background="{{ url_for('static', filename='img/emp_background.jpeg')}}" class="background"> -->
+<body background="{{ url_for('static', filename='img/emp_background.jpg')}}" class="background">
   <div id="header">
     <table style="width:100%; height: 60pt;">
           <tr>
